Toegevoegd smart law

--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -182,52 +182,63 @@
             <section id="competenties-initiatief">
                 <h3>Initiatief</h3>
                 <div class="content">
-                <div class="column-content">
-                    <div class="box-onlytext">
-                        <h6>Je toont veel initiatief en betrokkenheid</h6>
-                        <blockquote>
-                            <p>
-                                Ik heb mijn initiatief bewezen door op tijd aanwezig te zijn en actief mee te doen met
-                                de workshops en het project. Ik heb aan alle huiswerkopdrachten en presentaties gewerkt
-                                en ben aanwezig geweest bij alle lessen zo ver als mogelijk was. Ditzelfde gelde ook
-                                voor het project waarbij ik vaak open stond voor vragen. Daarnaast had ik ook genoeg
-                                inbreng en dit kreeg ik ook terug, want vanuit Nathan kreeg ik over dit punt het
-                                volgende te horen: “Dit heb ik gemerkt aan je houding tijdens het project, je bent
-                                actief tijdens het projcect bezig en pakt ook lekker door bij uitvoeren van taken.” Als
-                                concreet voorbeeld van mijn inzet heb ik geprobeerd OpenEMS Edge op een Raspberry Pi te
-                                draaien aangezien Pieter graag wou weten of dit kon. Helaas bleken de raspberry pi’s die
-                                op dat moment beschikbaar waren te oud te zijn. Dus heb ik het thuis op mijn eigen
-                                Raspberry Pi 4 uitgeprobeerd. Toen ik tussentijds keek naar de resultaten die ik en mijn
-                                teamgenoten boekten t.o.v. de hoeveelheid inzet die ervoor benodigd was maakte ik mij
-                                toch wel zorgen, maar toen we eenmaal het onderzoeksrapport af hadden ben ik zeker
-                                tevreden met het resultaat.
-                            </p>
-                        </blockquote>
+                    <div class="column-content">
+                        <div class="box-onlytext">
+                            <h6>Je toont veel initiatief en betrokkenheid</h6>
+                            <blockquote>
+                                <p>
+                                    Ik heb mijn initiatief bewezen door op tijd aanwezig te zijn en actief mee te doen
+                                    met
+                                    de workshops en het project. Ik heb aan alle huiswerkopdrachten en presentaties
+                                    gewerkt
+                                    en ben aanwezig geweest bij alle lessen zo ver als mogelijk was. Ditzelfde gelde ook
+                                    voor het project waarbij ik vaak open stond voor vragen. Daarnaast had ik ook genoeg
+                                    inbreng en dit kreeg ik ook terug, want vanuit Nathan kreeg ik over dit punt het
+                                    volgende te horen: “Dit heb ik gemerkt aan je houding tijdens het project, je bent
+                                    actief tijdens het projcect bezig en pakt ook lekker door bij uitvoeren van taken.”
+                                    Als
+                                    concreet voorbeeld van mijn inzet heb ik geprobeerd OpenEMS Edge op een Raspberry Pi
+                                    te
+                                    draaien aangezien Pieter graag wou weten of dit kon. Helaas bleken de raspberry pi’s
+                                    die
+                                    op dat moment beschikbaar waren te oud te zijn. Dus heb ik het thuis op mijn eigen
+                                    Raspberry Pi 4 uitgeprobeerd. Toen ik tussentijds keek naar de resultaten die ik en
+                                    mijn
+                                    teamgenoten boekten t.o.v. de hoeveelheid inzet die ervoor benodigd was maakte ik
+                                    mij
+                                    toch wel zorgen, maar toen we eenmaal het onderzoeksrapport af hadden ben ik zeker
+                                    tevreden met het resultaat.
+                                </p>
+                            </blockquote>
+                        </div>
                     </div>
-                </div>
             </section>
             <section id="competenties-meningen-adviezen">
                 <h3>Meningen & Adviezen</h3>
                 <div class="content">
-                <div class="column-content">
-                    <div class="box-onlytext">
-                        <h6>Jouw meningen en adviezen zijn gebaseerd op gedegen onderzoek</h6>
-                        <blockquote>
-                            <p>
-                                Tijdens het project heb ik concreet gewerkt aan de juridische excepties voor het
-                                oprichten van een energiegemeenschap van mkb’ers. Hiervoor heb ik de huidige
-                                elektriciteitswet van 1998, het voorstel voor de nieuwe energiewet en regelgeving vanuit
-                                het ACM doorgenomen. Vervolgens heb ik deze resultaten ook meerdere keren met Cezar
-                                doorgenomen. Uit de resultaten heb ik een aantal excepties gevonden en een aanbeveling
-                                voor een strategie om een energiegemeenschap op te zetten. Daarnaast heb ik gekeken naar
-                                hoe een wet van begin tot eind gerealiseerd wordt om een advies te kunnen geven over
-                                wanneer de nieuwe energiewet ingaat en wat deze mogelijk gaat brengen. En om
-                                duidelijkheid te krijgen rondom welke EMS-optie het beste was heb ik meegeholpen aan het
-                                opzetten van een PVE (plan van eisen) om de opties te vergelijken.
-                            </p>
-                        </blockquote>
+                    <div class="column-content">
+                        <div class="box-onlytext">
+                            <h6>Jouw meningen en adviezen zijn gebaseerd op gedegen onderzoek</h6>
+                            <blockquote>
+                                <p>
+                                    Tijdens het project heb ik concreet gewerkt aan de juridische excepties voor het
+                                    oprichten van een energiegemeenschap van mkb’ers. Hiervoor heb ik de huidige
+                                    elektriciteitswet van 1998, het voorstel voor de nieuwe energiewet en regelgeving
+                                    vanuit
+                                    het ACM doorgenomen. Vervolgens heb ik deze resultaten ook meerdere keren met Cezar
+                                    doorgenomen. Uit de resultaten heb ik een aantal excepties gevonden en een
+                                    aanbeveling
+                                    voor een strategie om een energiegemeenschap op te zetten. Daarnaast heb ik gekeken
+                                    naar
+                                    hoe een wet van begin tot eind gerealiseerd wordt om een advies te kunnen geven over
+                                    wanneer de nieuwe energiewet ingaat en wat deze mogelijk gaat brengen. En om
+                                    duidelijkheid te krijgen rondom welke EMS-optie het beste was heb ik meegeholpen aan
+                                    het
+                                    opzetten van een PVE (plan van eisen) om de opties te vergelijken.
+                                </p>
+                            </blockquote>
+                        </div>
                     </div>
-                </div>
             </section>
             <section id="competenties-ambitie">
                 <h3>Ambitie</h3>
@@ -365,13 +376,29 @@
                 <div class="content">
                     <div class="column-content">
                         <div class="box-lowerimg">
-                            <a href="images/CamielN/business_model_canvas.jpg">
-                                <img src="images/CamielN/business_model_canvas.jpg" alt="business_model_canvas"
-                                    height="700px" width="900px">
+                            <a href="images/CamielN/word_cloud.png">
+                                <img src="images/CamielN/word_cloud.png" alt="word_cloud" height="700px" width="900px">
                             </a>
                             <h6>Law</h6>
                             <blockquote>
                                 <p>
+                                    Voor smart Law hebben we een workshop gehad die gegeven werd door Cezar. Hierin
+                                    kregen we kort uitleg over de verschillende soorten AI die toegepast zou kunnen
+                                    worden om beslissingen te maken binnen de wetgeving. Dit werd gevolgd met
+                                    toelichting waarom AI niet geschikt is om deze beslissingen te maken met een
+                                    voorbeeld van hoe ChatGPT bij vragen over de Nederlandse wetgeving toch gelijk
+                                    antwoorden gaf die betrekking had op het Amerikaanse rechtssysteem. Dit hebben wij
+                                    als klas aangevuld met een wordcloud zoals hieronder zichtbaar.
+                                    Toen heeft hij ons de opdracht gegeven om een debat voor te bereiden over de
+                                    volgende stelling: “AI
+                                    moet zelfstandig keuzes kunnen maken in belangrijke situaties.” Ik ben bij het team
+                                    gaan zitten die tegen AI was om keuzes te maken binnen het rechtssysteem. Ik had dit
+                                    gedaan aangezien bijna iedereen vindt dat dit een slecht idee is en het natuurlijk
+                                    logisch is om dit niet te implementeren. Maar hierdoor was onze voorbereiding juist
+                                    slordiger aangezien je er dan vanuit gaat dat je wint. En bij de uitvoering van het
+                                    debat was dit wel te merken waardoor het team dat voor AI was uiteindelijk heeft
+                                    gewonnen. Hiervan heb ik geleerd dat, ongeacht hoe zeker je bent van een zaak, je
+                                    toch je argumentatie goed moet voorbereiden als je iemand wilt overtuigen.
                                 </p>
                             </blockquote>
                         </div>
@@ -615,7 +642,8 @@
                                     ik besloot hierbij gelijk bezig te gaan met de spotify api om live als ik muziek aan
                                     het afspelen ben dit weer te geven. Helaas kwam ik er al snel achter dat ik hiermee
                                     mijn eigen inloggegevens en apikey van mijn spotify moest meecomitten dus heb ik
-                                    ervoor gekozen om een playlist te embedden zoals hieronder zichtbaar is.
+                                    ervoor gekozen om een playlist te embedden. Daarnaast vind je hieronder ook de NASA
+                                    api.
                                 </p>
                             </blockquote>
                             <iframe style="border-radius:12px"
