--- a/Portfolio-Nena-Renting.html
+++ b/Portfolio-Nena-Renting.html
@@ -550,7 +550,7 @@
                                 </p>
                             </blockquote>
                         </div>
-                        <div class="box-rightimg">
+                        <div class="box-rightimg" id="API-box">
                             <div class="small-sidebox" style="width: 150px; height: 150px;">
                                 <div id="weather" style="width: inherit; height: inherit;">
                                     <p id="description"><p>
@@ -601,10 +601,10 @@
                                 </p>
                             </blockquote>
                             <div id="NASA-api" style="width: 150px; height: 150px;">
-                                <h6 id="title"><h6>
-                                <section id="media-section"></section>
+                                <h6 id="nasa-title"><h6>
+                                <section id="nasa-media-section"></section>
                             </div>
-                            <script>
+                            <!-- <script>
                                 const apiKey = 'CYtsN6hBGQfsrYbKekU2JPUHcQkGYhUxBtz4VCcx';
                                 const today = new Date().toISOString().slice(0, 10);
                                 const apiUrl = 'https://api.nasa.gov/planetary/apod?api_key=${apiKey}&date=${today}';
@@ -635,7 +635,7 @@
                                         console.error('Error fetching the NASA img data:', error);
                                         document.getElementById('title').textContent = 'Error fetching data';
                                     });
-                            </script>
+                            </script> -->
                         </div>
                         <div class="box-onlytext">
                             <h6>AI</h6>
@@ -653,6 +653,7 @@
             </section>
         </section>
     </div>
+    <script src="js/api/NenaR/nasa.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
