--- a/Portfolio-Nathan-van-der-Veer.html
+++ b/Portfolio-Nathan-van-der-Veer.html
@@ -235,27 +235,16 @@
                             </blockquote>
                         </div>
                         <div class="box-lowerimg">
-                            <a href="images/NathanVdV/Note1 Management game.jpeg">
-                                <img src="images/NathanVdV/Note1 Management game.jpeg" alt="Kleurentest" width="20%" aspect-ratio="2/3">
+                            <a href="images/NathanVdV/All notes Management game.png">
+                                <img src="images/NathanVdV/All notes Management game.png" alt="Kleurentest" width="95%" aspect-ratio="2/3">
                             </a>
-                            <a href="images/NathanVdV/Note2 Management game.jpeg">
-                                <img src="images/NathanVdV/Note2 Management game.jpeg" alt="Kleurentest" width="20%" aspect-ratio="2/3">
-                            </a>
-                            <a href="images/NathanVdV/Note3 Management game.jpeg">
-                                <img src="images/NathanVdV/Note3 Management game.jpeg" alt="Kleurentest" width="20%" aspect-ratio="2/3">
-                            </a>
-                            <a href="images/NathanVdV/Note4 Management game.jpeg">
-                                <img src="images/NathanVdV/Note4 Management game.jpeg" alt="Kleurentest" width="20%" aspect-ratio="2/3">
-                            </a>
-                            <h6>Part I - Rollenspel</h6>
+                            <h6>Part I - Reflectie Rollenspel</h6>
                             <blockquote>
                                 <p>
-                                    Reflectie
-                                    <br>
-                                    Hoe ben ik zelf en samen met mijn duo daarmee aan de slag gegaan.
+                                    Hoe ben ik zelf en samen met mijn duo daarmee aan de slag gegaan?
                                     <br>
                                     De management game was een goede oefening om aan mijn eigen communicatie skills te werken. Door te luisteren naar de andere partijen is het gelukt om samen aan een oplossing te werken. Hierbij zijn door alle partijen enkele compromissen gesloten om het totale resultaat beter te maken.
-                                    <br>
+                                    <br><br>
                                     Persoonlijke notities:
                                 </p>
                             </blockquote>
@@ -267,17 +256,7 @@
                             <h6>Part II – Dinamomodel</h6>
                             <blockquote>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero
-                                    quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi.
-                                    Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa
-                                    mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis
-                                    ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non
-                                    justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet
-                                    dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi
-                                    hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo
-                                    laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et
-                                    tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus
-                                    ipsum auctor.
+                                    
                                 </p>
                             </blockquote>
                         </div>
@@ -445,11 +424,6 @@
                         width="100%" height="352" frameBorder="0" allowfullscreen=""
                         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                         loading="lazy">
-                    </iframe>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/bgJ_1WuhUig?si=epCKUhnPRq25SALO"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                     </iframe>
                     <div class="box-onlytext">
                         <h6>Open Weather</h6>
@@ -788,11 +762,13 @@
                                     <br>
                                     •	Billy Cup, Recyclebare beker van de HAN_
                                     <br><br>
-                                    Hier is het volledige plantensysteem te zien
+                                    Resultaat
+                                    <br><br>
+                                    Hier is het volledige plantensysteem te zien en onderstaand een video van het plantsysteem in werking.
                                 </p>
                             </blockquote>
                         </div>
-                        <video width="90%" aspect-ratio="2/3" controls autoplay muted>
+                        <video width="95%" aspect-ratio="2/3" controls autoplay muted>
                             <source src="Video's/video's Nathan/Systeem in werking Nathan.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
@@ -803,19 +779,130 @@
                 <h3>IoT schakeling</h3>
                 <div class="content">
                     <div class="column-content">
-                        <div class="box-rightimg">
-                            <a href="images/NathanVdV/Smart Plant Nathan.jpeg">
-                                <img src="images/NathanVdV/Smart Plant Nathan.jpeg" alt="Kleurentest" width="95%" aspect-ratio="2/3">
-                            </a>
-                            <h6>1. Innoveren</h6>
+                        <div class="box-onlytext">
+                            <h6>Algemeen over de workshop</h6>
                             <blockquote>
                                 <p>
-                                    Vaak ben ik vanuit de WTB betrokken bij projecten waarbij gewerkt wordt aan een nieuw product waarvoor een productie proces moet worden opgezet.
+                                    Workshop maken van een IoT schakeling met ESP32 MCU die uiteindelijk gebruikt is voor het werken van het slimme plantensysteem.
                                     <br><br>
-                                    Bij innovatie projecten is het voor mij als WTB belangrijk om te leren hoe ik een bedrijf hierbij kan begeleiden. Het proces moet terug worden doorlopen van bestaand product/proces d.m.v. een verkenningstraject naar de idee fase, van 1 naar 2 (tegenovergesteld aan een standaard ontwerptraject, van 3 naar 4). Bijstaande afbeelding laat het verschil in innovatierichting zien.                                    
+                                    Tijdens de workshop heb ik leren werken met: 
+                                    <br>
+                                    •	VisualStudeo code
+                                    <br>
+                                    •	platformIO
+                                    <br>
+                                    •	ESP32 MCU (Micro Computer Unit)
+                                    <br>
+                                    •	Verschillende sensors behandeld voor functionaliteit en hoe te koppelen.
+                                    <br>
+                                    •	Signalen zenden en ontvangen met SPC 
+                                    <br>
+                                    o	    Vinden van gewenste signaal
+                                    <br>
+                                    o	    Gebruiken voor het versturen van signaal naar apparatuur (Klik-aan/-uit)                                    
                                 </p>
                             </blockquote>
                         </div>
+                        <div class="box-onlytext">
+                            <h6>Opbouw van de IoT schakeling</h6>
+                            <blockquote>
+                                <p>
+                                    De IoT schakeling bestaat uit de volgende componenten:
+                                    <br>
+                                    •	Breadbord/PCB
+                                    <br>
+                                    •	ESP32 MCU
+                                    <br>
+                                    •	LDR
+                                    <br>
+                                    •	weerstandje
+                                    <br>
+                                    •	RF Transmittor
+                                    <br>
+                                    •	Klik-aan/-uit schakelaar
+                                    <br>
+                                    •	DHT sensor
+                                    <br>
+                                    •	Moisture sensor
+                                    <br>
+                                    •	Batterijbox
+                                    <br>
+                                    •	Relais
+                                    <br>
+                                    •	Waterpomp (dompelpomptype)
+                                </p>
+                            </blockquote>
+                        </div>
+                        <div class="box-lowerimg">
+                            <a href="images/NathanVdV/PCB Nathan.jpeg">
+                                <img src="images/NathanVdV/PCB Nathan.jpeg" alt="Kleurentest" width="95%px" aspect-ratio="2/3">
+                            </a>
+                            <h6>PCB ontwerp</h6>
+                            <blockquote>
+                                <p>
+                                    Met de software Eagle is in samenwerking met Marc de PCB voor het plantensysteem ontworpen. Het ontwerp is rond voor de toepassing in het vaasdesign van de PCB-case waarin uiteindelijk de elektronica/componenten, reservoir en planten pot in een behuizing aanwezig zijn.
+                                </p>
+                            </blockquote>
+                        </div>
+                        <div class="box-lowerimg">
+                            <h6>Workshop solderen</h6>
+                            <blockquote>
+                                <p>
+                                    Voor deze workshop hebben we headers en componenten voor het planten systeem op onze eigen ontworpen PCB’s gesoldeerd. Het was al een tijdje geleden dat ik iets gesoldeerd had dus dit was leuk om weer eens te doen.
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="smartTechnology-additiveManufacturing">
+                <h3>Additive Manufacturing</h3>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext">
+                            <h6>Part I: AM technieken</h6>
+                            <blockquote>
+                                <p>
+                                    Dit college behandelde verschillende additive manufacturing (AM) technieken, de voor- en nadelen van de verschillende soorten en enkele verschillen met subtractieve manufacturing. Vanuit WTB is dit voor mij bekende stof, voornamelijk herhaling.
+                                </p>
+                            </blockquote>
+                        </div>
+                        <div class="box-onlytext">
+                            <h6>Part II: Voordelen van AM</h6>
+                            <blockquote>
+                                <p>
+                                    De tweede les van Additive manufacturing heeft ieder groepje (zelfde als projectgroep) een kortte presentatie gegeven over een ander onderwerp m.b.t. de voordelen van additive manufacturing. Het onderwerp dat mijn groep heeft gepresenteerd was: Complexiteit & Performance van AM. 
+                                    <br><br>
+                                    Omdat ik van het onderwerp al een hoop afweet vond ik het leuk om mijn kennis en ervaring over het onderwerp met mede studenten te kunnen delen. De PowerPoint is wederom aan deze paragraaf toegevoegd:
+                                </p>
+                            </blockquote>
+                        </div>
+                        <div class="box-onlytext">
+                            <h6>Part III: Fab-Lab</h6>
+                            <blockquote>
+                                <p>
+                                    Bij het derde deel van additive manufacturing hebben we een cursus gevolgd in het Fab-lab waarbij verder uitgelegd werd hoe 3D-printen werkt, hoe je eigen modellen kan “Slicen”, en waar je op moet letten voor een printbaar model.
+                                    <br><br>
+                                    Ik heb zelf al veel ervaring met 3D-printen en modeleren produceerbare ontwerpen dus dit was bekende stof voor mij. Daarom heb ik andere studenten hiermee kunnen helpen en tips bij geven.
+                                </p>
+                            </blockquote>
+                        </div>
+                        <div class="box-rightimg">
+                            <a href="images/NathanVdV/3d Vaas.PNG">
+                                <img src="images/NathanVdV/3d Vaas.PNG" alt="Kleurentest" width="250px" aspect-ratio="2/3">
+                            </a>
+                            <h6>Behuizing plantensysteemS</h6>
+                            <blockquote>
+                                <p>
+                                    Bij dit kopje zijn de 3D aanzichten te zien van het CAD-model voor de behuizing.
+                                    <br><br>
+                                    Het ontwerp van de behuizing voor de (elektronische) componenten en PCB van het plantensysteem heeft de vorm van een vaas. Er is gekozen om een HAN_Billy cup te gebruiken als container voor de aarde en de plant omdat deze water dicht is en wijd verkrijgbaar op de HAN locaties (niet te vergeten recyclebaar). Verder is er een water reservoir toegevoegd dat bestaat uit het Elk drankkarton ontvangen tijdens de workshop.
+                                </p>
+                            </blockquote>
+                        </div>
+                        <a href="images/NathanVdV/Vaas CAD faces.png">
+                            <img src="images/NathanVdV/Vaas CAD faces.png" alt="Kleurentest" width="70%" aspect-ratio="1/1">
+                        </a>
                     </div>
                 </div>
             </section>
